# rq

./: .eslintrc.cjs  Cargo.toml  new_queue.html  package.json  pnpm-lock.yaml  rome.json  rq.psd  settings.html  tauri.conf.json  tsconfig.json  vite.config.ts
.cargo-husky/hooks/: pre-push
.github/workflows/: main.yml
src/: app.tsx  index.css  main.tsx  new_queue.tsx  settings.tsx  utilities.ts
src-tauri/: Cargo.toml  commands.rs  main.rs  new_queue.rs  queue.rs  settings.rs  tauri.conf.json  util.rs
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/ldap3/: Cargo.toml
src-tauri/src/: commands.rs  main.rs  queue.rs  settings.rs  util.rs
src/components/: app.tsx  new_queue.tsx  queuecard.tsx  settings.tsx
src/css/: app.css  index.css
src/css/themes/: default_theme.scss
src/css/themes/98/: 98.scss  style.css
src/data/: message.ts  queue.ts  settings.ts  user.ts
