[package]
name = "rq"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "rq"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "rq"
path = "src-tauri/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all", "macos-private-api", "system-tray"] }
tokio-tungstenite = "0.17.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full", "sync"] }
url = "2.2.2"
console-subscriber = "0.1.6"
http = "0.2.8"
tokio-stream = "0.1.9"
futures-util = { version = "0.3.21", features = ["sink"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
tokio-util = "0.7.3"
tracing-unwrap = "0.9.2"
toml = "0.5.9"
confy = "0.5.0"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "user-hooks"], default-features = false }

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="linux")'.dependencies]
gtk = "0.15.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
debug = true

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook"] }
